Aggiunta di starter data JPA per springboot (Gestione DB)
Aggiunta selezione DB su cui operare tramite SpringBoot (application.properties -> Riga 6 -> scegliere tra h2/postgres)

modifiche relative alla compatibilità per il corretto funzionamento del database scelto in springboot web

Creazione di un DataSourceConfig per configurare correttamente il DB da utilizzare

Creazione di una cartella "entities" e con annessa classe Forma

modifiche maggiori su diversi file per gestire le varie compatibilità

TODO:

♦ Permettere a SpringBoot di leggere correttamente i dati all'interno del DB selezionato.

♦ Ottimizzazioni Varie